# retrieval-intro

./: README.md  pyproject.toml  requirements.txt
data/: dim_passengers.csv  dim_ports.csv  dim_tickets.csv  overview.ipynb
src/: agent.py  evals.py  retrieve.py  run.py
src/retrieval_intro/: agent.py  evals.py  run.py  vector_db.py
